--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "holoplot-front-end-task",
+  "name": "audio level broadcaster",
   "private": true,
   "version": "0.0.0",
   "type": "module",
